// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 2`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 3`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 4`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 5`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 6`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other bad origin events 7`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > chill other > chill other events 1`] = `
[
  {
    "data": {
      "stash": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > force apply validator commission > force apply min commission events 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > modify validator count > increase validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > modify validator count > scale validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > modify validator count > set validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > set invulnerables with bad origin > events when setting invulnerables with bad staking admin origin 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": "BadOrigin",
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Kusama Staking > base staking tests > set invulnerables with bad origin > set invulnerables events with bad signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > alice funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999112324871,
  "frozen": 0,
  "reserved": 5000000000000,
}
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999112324871,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > balances slash events 1`] = `[]`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > bob funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999112324871,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999112324871,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > charlie funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999112324871,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999112324871,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > base staking tests > set invulnerables with root origin > staking slash events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "staker": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "Fr4NzY1udSFFLzb2R3qxVQkwz9cZraWkyfH4h3mVVk7BK7P",
    },
    "method": "Slashed",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > set minimum validator commission > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > set staking configs > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > set staking configs > set staking configs event 1`] = `
{
  "event": {
    "data": [
      {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000)",
          "refTime": "(rounded 300000000)",
        },
      },
    ],
    "index": "0x0000",
  },
  "phase": {
    "applyExtrinsic": 0,
  },
  "topics": [],
}
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > chill events 1`] = `
[
  {
    "data": {
      "stash": "FQ3JxEebQJY23NumtMUU1k7YJrbyK6L8j4uK5VwKpeVqFnh",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > events when attempting to nominate a blocked validator 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x14000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > kick events 1`] = `
[
  {
    "data": {
      "nominator": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "stash": "FQ3JxEebQJY23NumtMUU1k7YJrbyK6L8j4uK5VwKpeVqFnh",
    },
    "method": "Kicked",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > nominator bond extra events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > unbond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 33000000000000)",
      "stash": "FQ3JxEebQJY23NumtMUU1k7YJrbyK6L8j4uK5VwKpeVqFnh",
    },
    "method": "Unbonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validate (blocked) events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": true,
        "commission": "15.00%",
      },
      "stash": "FQ3JxEebQJY23NumtMUU1k7YJrbyK6L8j4uK5VwKpeVqFnh",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validator 0 bond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 33000000000000)",
      "stash": "FQ3JxEebQJY23NumtMUU1k7YJrbyK6L8j4uK5VwKpeVqFnh",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validator 0 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "15.00%",
      },
      "stash": "FQ3JxEebQJY23NumtMUU1k7YJrbyK6L8j4uK5VwKpeVqFnh",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validator 1 bond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 33000000000000)",
      "stash": "GtgvkKoi3CxJk2mP5ZzuJ7Mj8ipiy4Sf6T4wtt89W8m8FNa",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validator 1 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "15.00%",
      },
      "stash": "GtgvkKoi3CxJk2mP5ZzuJ7Mj8ipiy4Sf6T4wtt89W8m8FNa",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validator 2 bond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 33000000000000)",
      "stash": "ErRmn1hykJ1ppjMoNfQyRYA9c3j7y3YZnKQsCecD1k9D42B",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > staking lifecycle > validator 2 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "15.00%",
      },
      "stash": "ErRmn1hykJ1ppjMoNfQyRYA9c3j7y3YZnKQsCecD1k9D42B",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > test fast unstake > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > base staking tests > test force unstaking of nominator > force unstake bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > trying to become a validator with no bonded funds fails > events when attempting to validate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > base staking tests > trying to nominate with no bonded funds fails > events when attempting to nominate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 6,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > fast unstake > test fast unstake > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash as admin > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash as admin > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash as admin > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash as root > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash as root > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash as root > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > cancel deferred slash with bad origin > cancel deferred slash events with bad origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 80000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Staking > slashing tests > unapplied slash > alice funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 5000000000000,
}
`;

exports[`Kusama Staking > slashing tests > unapplied slash > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > unapplied slash > balances slash events 1`] = `[]`;

exports[`Kusama Staking > slashing tests > unapplied slash > bob funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Kusama Staking > slashing tests > unapplied slash > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > unapplied slash > charlie funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Kusama Staking > slashing tests > unapplied slash > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999554590223,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Kusama Staking > slashing tests > unapplied slash > staking slash events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "staker": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "D2oHoVDFJGy7iDYcY7fbm82CuNycWaSxCGpsQtLqkrE9JKf",
    },
    "method": "Slashed",
    "section": "staking",
  },
]
`;
